Prepare release 1.6.1